<resources>
    <string name="app_name">The Movie Manager</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="add_watchlist">Add Watchlist</string>
    <string name="search">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="favorites">Favorites</string>
    <string name="details">Details</string>
    <string name="film_backdrop">Film Backdrop</string>
    <string name="overview">Overview:</string>
    <string name="app_icon">App Icon</string>
    <string name="login_wia_email">Login wia Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="login_wia_website">Login wia Website</string>
    <string name="placeholder">Placeholder</string>
</resources>