<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/bottommenuSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_round_local_movies_24"
        app:showAsAction="always"
        android:enabled="true"/>

    <item
        android:id="@+id/bottommenuWatchlist"
        android:title="@string/watchlist"
        android:icon="@drawable/ic_round_view_list_24"
        app:showAsAction="always"
        android:enabled="true" />

    <item
        android:id="@+id/bottommenuFavorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_round_favorite_24"
        app:showAsAction="always"
        android:enabled="true"/>

</menu>