<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/loginScreenMovieIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_movie_24"
                app:tint="@color/red"
                android:contentDescription="@string/app_icon" />

            <TextView
                android:id="@+id/loginScreenAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/roboto_regular"
                android:textSize="28dp"
                android:textColor="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_wia_email"
                android:fontFamily="@font/roboto_italic"
                android:textSize="18dp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:elevation="5dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/orange"
                app:startIconDrawable="@drawable/ic_round_account_box_24"
                app:startIconTint="@color/green"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/orange"
                app:startIconDrawable="@drawable/ic_round_password_24"
                app:startIconTint="@color/green"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:elevation="5dp"
                android:text="@string/login"
                android:fontFamily="@font/roboto_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/or"
                android:fontFamily="@font/roboto_medium"/>

            <Button
                android:id="@+id/loginWiaWebsiteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/login_wia_website"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_italic" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>