<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:menu="@menu/appbar_menu"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Button
                android:id="@+id/details_toolbar_back"
                android:layout_gravity=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_round_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_black"
                android:layout_gravity="center"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/movieBackDrop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider"
                android:contentDescription="@string/film_backdrop" />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="20dp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/movieVoteAverage"
                app:layout_constraintBottom_toTopOf="@+id/movieVoteAverage"/>

            <TextView
                android:id="@+id/movieVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/placeholder"
                android:textSize="18dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                app:drawableLeftCompat="@drawable/ic_round_star_24"
                app:drawableTint="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/movieDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/placeholder"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                app:drawableRightCompat="@drawable/ic_round_calendar_month_24"
                app:drawableTint="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/overview"
            android:textSize="18dp"
            android:fontFamily="@font/roboto_black"
            android:layout_gravity="start" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@drawable/scrollbar_desing">

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/placeholder"
                android:textSize="18dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black" />

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>